[tool.poetry]
name = "fluke-api"
version = "0.5.0"
authors = ["Manos Stoumpos <manosstoumpos@gmail.com>"]
description = "Cloud-agnostic Python API"

[tool.poetry.dependencies]
python = "^3.11"
azure-identity = "^1.15.0"
azure-storage-blob = "^12.19.0"
azure-storage-queue = "^12.9.0"
boto3 = "^1.34.56"
google-cloud-storage = "^2.15.0"
paramiko = "^3.4.0"
tqdm = "^4.66.2"